<resources>
    <string name="app_name">Crypto_machine_test</string>
    <string name="prices">Prices</string>
    <string name="global_market_caps_178_28_534086_57">Global Market Caps : $178,28,534086.57</string>
    <string name="search_coins">Search Coins...</string>
    <string name="price">Price</string>
    <string name="change">Change</string>
    <string name="name">Name</string>

    <string name="favorites">Favorites</string>
    <string name="portfolio">Portfolio</string>
    <string name="news">News</string>
    <string name="invest">Invest</string>
</resources>